@@ -21,8 +21,6 @@ package org.apache.fineract.portfolio.client.serialization;
 import com.google.gson.JsonElement;
 import com.google.gson.reflect.TypeToken;
 import java.lang.reflect.Type;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import org.apache.commons.lang3.StringUtils;
@@ -43,7 +41,8 @@ public final class ClientIdentifierCommandFromApiJsonDeserializer extends Abstra
     /**
      * The parameters supported for this command.
      */
-    private final Set<String> supportedParameters = new HashSet<>(Arrays.asList("documentTypeId", "documentKey", "status", "description"));
+    private final Set<String> supportedParameters = Set.of("documentTypeId", "documentIssueCountryCode", "documentKey", "status",
+            "description");
 
     private final FromJsonHelper fromApiJsonHelper;
 
@@ -64,9 +63,10 @@ public final class ClientIdentifierCommandFromApiJsonDeserializer extends Abstra
 
         final JsonElement element = this.fromApiJsonHelper.parse(json);
         final Long documentTypeId = this.fromApiJsonHelper.extractLongNamed("documentTypeId", element);
+        final String documentIssueCountryCode = this.fromApiJsonHelper.extractStringNamed("documentIssueCountryCode", element);
         final String documentKey = this.fromApiJsonHelper.extractStringNamed("documentKey", element);
         final String documentDescription = this.fromApiJsonHelper.extractStringNamed("documentDescription", element);
         final String statusString = this.fromApiJsonHelper.extractStringNamed("status", element);
-        return new ClientIdentifierCommand(documentTypeId, documentKey, statusString, documentDescription);
+        return new ClientIdentifierCommand(documentTypeId, documentIssueCountryCode, documentKey, statusString, documentDescription);
     }
 }
